flexbison/mikroC.output
State 19 conflicts: 1 shift/reduce
State 23 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: '{' prikazy '}'

    2 prikazy: prikaz prikazy
    3        | ε

    4 prikaz: '{' prikazy '}'
    5       | vyraz ';'
    6       | ';'
    7       | IF '(' vyraz ')' prikaz
    8       | IF '(' vyraz ')' prikaz ELSE prikaz
    9       | FOR '(' vyrazf ';' vyraz ';' vyrazf ')' prikaz
   10       | WHILE '(' vyraz ')' prikaz
   11       | DO prikaz WHILE '(' vyraz ')' ';'
   12       | '{' prikazy error '}'
   13       | error ';'

   14 vyrazf: vyraz
   15       | ε

   16 prikaz: PRINT '(' vyraz ')' ';'
   17       | PRINT '(' retez ')' ';'
   18       | PRINT '(' retez ',' vyraz ')' ';'
   19       | SCAN '(' promenna ')' ';'

   20 retez: RETEZ

   21 vyraz: INKREM promenna
   22      | DEKREM promenna
   23      | promenna INKREM
   24      | promenna DEKREM
   25      | '!' vyraz
   26      | NOT vyraz
   27      | '~' vyraz
   28      | vyraz '*' vyraz
   29      | vyraz '/' vyraz
   30      | vyraz '%' vyraz
   31      | vyraz '+' vyraz
   32      | vyraz '-' vyraz
   33      | vyraz POSUNVLEVO vyraz
   34      | vyraz POSUNVPRAVO vyraz
   35      | vyraz '<' vyraz
   36      | vyraz '>' vyraz
   37      | vyraz MENSIROVNO vyraz
   38      | vyraz VETSIROVNO vyraz
   39      | vyraz ROVNO vyraz
   40      | vyraz NENIROVNO vyraz
   41      | vyraz '&' vyraz
   42      | vyraz '^' vyraz
   43      | vyraz '|' vyraz
   44      | vyraz AND vyraz
   45      | vyraz OR vyraz
   46      | promenna '=' vyraz
   47      | promenna P_NASOB vyraz
   48      | promenna P_DELEN vyraz
   49      | promenna P_MODUL vyraz
   50      | promenna P_PRICT vyraz
   51      | promenna P_ODECT vyraz
   52      | promenna P_POSUNVLEVO vyraz
   53      | promenna P_POSUNVPRAVO vyraz
   54      | promenna P_AND vyraz
   55      | promenna P_XOR vyraz
   56      | promenna P_OR vyraz
   57      | '-' vyraz
   58      | '+' vyraz
   59      | '(' vyraz ')'
   60      | promenna
   61      | CISLO
   62      | '(' error ')'

   63 promenna: PROMENNA


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 25
    '%' (37) 30
    '&' (38) 41
    '(' (40) 7 8 9 10 11 16 17 18 19 59 62
    ')' (41) 7 8 9 10 11 16 17 18 19 59 62
    '*' (42) 28
    '+' (43) 31 58
    ',' (44) 18
    '-' (45) 32 57
    '/' (47) 29
    ';' (59) 5 6 9 11 13 16 17 18 19
    '<' (60) 35
    '=' (61) 46
    '>' (62) 36
    '^' (94) 42
    '{' (123) 1 4 12
    '|' (124) 43
    '}' (125) 1 4 12
    '~' (126) 27
    error (256) 12 13 62
    CISLO <c> (258) 61
    RETEZ <r> (259) 20
    PROMENNA <r> (260) 63
    IF (261) 7 8
    ELSE (262) 8
    FOR (263) 9
    WHILE (264) 10 11
    DO (265) 11
    PRINT (266) 16 17 18
    SCAN (267) 19
    P_NASOB (268) 47
    P_DELEN (269) 48
    P_MODUL (270) 49
    P_PRICT (271) 50
    P_ODECT (272) 51
    P_POSUNVLEVO (273) 52
    P_POSUNVPRAVO (274) 53
    P_AND (275) 54
    P_XOR (276) 55
    P_OR (277) 56
    OR (278) 45
    AND (279) 44
    ROVNO (280) 39
    NENIROVNO (281) 40
    MENSIROVNO (282) 37
    VETSIROVNO (283) 38
    POSUNVLEVO (284) 33
    POSUNVPRAVO (285) 34
    INKREM (286) 21 23
    DEKREM (287) 22 24
    NOT (288) 26
    MINUS (289)
    PLUS (290)


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program <u> (56)
        on left: 1
        on right: 0
    prikazy <u> (57)
        on left: 2 3
        on right: 1 2 4 12
    prikaz <u> (58)
        on left: 4 5 6 7 8 9 10 11 12 13 16 17 18 19
        on right: 2 7 8 9 10 11
    vyrazf <u> (59)
        on left: 14 15
        on right: 9
    retez <u> (60)
        on left: 20
        on right: 17 18
    vyraz <u> (61)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 5 7 8 9 10 11 14 16 18 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    promenna <u> (62)
        on left: 63
        on right: 19 21 22 23 24 46 47 48 49 50 51 52 53 54 55 56 60


State 0

    0 $accept: • program $end

    '{'  shift, and go to state 1

    program  go to state 2


State 1

    1 program: '{' • prikazy '}'

    error     shift, and go to state 3
    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    IF        shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    DO        shift, and go to state 9
    PRINT     shift, and go to state 10
    SCAN      shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '{'       shift, and go to state 19
    ';'       shift, and go to state 20
    '('       shift, and go to state 21

    '}'  reduce using rule 3 (prikazy)

    prikazy   go to state 22
    prikaz    go to state 23
    vyraz     go to state 24
    promenna  go to state 25


State 2

    0 $accept: program • $end

    $end  shift, and go to state 26


State 3

   13 prikaz: error • ';'

    ';'  shift, and go to state 27


State 4

   61 vyraz: CISLO •

    $default  reduce using rule 61 (vyraz)


State 5

   63 promenna: PROMENNA •

    $default  reduce using rule 63 (promenna)


State 6

    7 prikaz: IF • '(' vyraz ')' prikaz
    8       | IF • '(' vyraz ')' prikaz ELSE prikaz

    '('  shift, and go to state 28


State 7

    9 prikaz: FOR • '(' vyrazf ';' vyraz ';' vyrazf ')' prikaz

    '('  shift, and go to state 29


State 8

   10 prikaz: WHILE • '(' vyraz ')' prikaz

    '('  shift, and go to state 30


State 9

   11 prikaz: DO • prikaz WHILE '(' vyraz ')' ';'

    error     shift, and go to state 3
    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    IF        shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    DO        shift, and go to state 9
    PRINT     shift, and go to state 10
    SCAN      shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '{'       shift, and go to state 19
    ';'       shift, and go to state 20
    '('       shift, and go to state 21

    prikaz    go to state 31
    vyraz     go to state 24
    promenna  go to state 25


State 10

   16 prikaz: PRINT • '(' vyraz ')' ';'
   17       | PRINT • '(' retez ')' ';'
   18       | PRINT • '(' retez ',' vyraz ')' ';'

    '('  shift, and go to state 32


State 11

   19 prikaz: SCAN • '(' promenna ')' ';'

    '('  shift, and go to state 33


State 12

   58 vyraz: '+' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 34
    promenna  go to state 25


State 13

   57 vyraz: '-' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 35
    promenna  go to state 25


State 14

   21 vyraz: INKREM • promenna

    PROMENNA  shift, and go to state 5

    promenna  go to state 36


State 15

   22 vyraz: DEKREM • promenna

    PROMENNA  shift, and go to state 5

    promenna  go to state 37


State 16

   25 vyraz: '!' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 38
    promenna  go to state 25


State 17

   27 vyraz: '~' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 39
    promenna  go to state 25


State 18

   26 vyraz: NOT • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 40
    promenna  go to state 25


State 19

    4 prikaz: '{' • prikazy '}'
   12       | '{' • prikazy error '}'

    error     shift, and go to state 3
    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    IF        shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    DO        shift, and go to state 9
    PRINT     shift, and go to state 10
    SCAN      shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '{'       shift, and go to state 19
    ';'       shift, and go to state 20
    '('       shift, and go to state 21

    error  [reduce using rule 3 (prikazy)]
    '}'    reduce using rule 3 (prikazy)

    prikazy   go to state 41
    prikaz    go to state 23
    vyraz     go to state 24
    promenna  go to state 25


State 20

    6 prikaz: ';' •

    $default  reduce using rule 6 (prikaz)


State 21

   59 vyraz: '(' • vyraz ')'
   62      | '(' • error ')'

    error     shift, and go to state 42
    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 43
    promenna  go to state 25


State 22

    1 program: '{' prikazy • '}'

    '}'  shift, and go to state 44


State 23

    2 prikazy: prikaz • prikazy

    error     shift, and go to state 3
    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    IF        shift, and go to state 6
    FOR       shift, and go to state 7
    WHILE     shift, and go to state 8
    DO        shift, and go to state 9
    PRINT     shift, and go to state 10
    SCAN      shift, and go to state 11
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '{'       shift, and go to state 19
    ';'       shift, and go to state 20
    '('       shift, and go to state 21

    error  [reduce using rule 3 (prikazy)]
    '}'    reduce using rule 3 (prikazy)

    prikazy   go to state 45
    prikaz    go to state 23
    vyraz     go to state 24
    promenna  go to state 25


State 24

    5 prikaz: vyraz • ';'
   28 vyraz: vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz

    OR           shift, and go to state 46
    AND          shift, and go to state 47
    '|'          shift, and go to state 48
    '^'          shift, and go to state 49
    '&'          shift, and go to state 50
    ROVNO        shift, and go to state 51
    NENIROVNO    shift, and go to state 52
    '<'          shift, and go to state 53
    '>'          shift, and go to state 54
    MENSIROVNO   shift, and go to state 55
    VETSIROVNO   shift, and go to state 56
    POSUNVLEVO   shift, and go to state 57
    POSUNVPRAVO  shift, and go to state 58
    '+'          shift, and go to state 59
    '-'          shift, and go to state 60
    '*'          shift, and go to state 61
    '/'          shift, and go to state 62
    '%'          shift, and go to state 63
    ';'          shift, and go to state 64


State 25

   23 vyraz: promenna • INKREM
   24      | promenna • DEKREM
   46      | promenna • '=' vyraz
   47      | promenna • P_NASOB vyraz
   48      | promenna • P_DELEN vyraz
   49      | promenna • P_MODUL vyraz
   50      | promenna • P_PRICT vyraz
   51      | promenna • P_ODECT vyraz
   52      | promenna • P_POSUNVLEVO vyraz
   53      | promenna • P_POSUNVPRAVO vyraz
   54      | promenna • P_AND vyraz
   55      | promenna • P_XOR vyraz
   56      | promenna • P_OR vyraz
   60      | promenna •

    '='            shift, and go to state 65
    P_NASOB        shift, and go to state 66
    P_DELEN        shift, and go to state 67
    P_MODUL        shift, and go to state 68
    P_PRICT        shift, and go to state 69
    P_ODECT        shift, and go to state 70
    P_POSUNVLEVO   shift, and go to state 71
    P_POSUNVPRAVO  shift, and go to state 72
    P_AND          shift, and go to state 73
    P_XOR          shift, and go to state 74
    P_OR           shift, and go to state 75
    INKREM         shift, and go to state 76
    DEKREM         shift, and go to state 77

    $default  reduce using rule 60 (vyraz)


State 26

    0 $accept: program $end •

    $default  accept


State 27

   13 prikaz: error ';' •

    $default  reduce using rule 13 (prikaz)


State 28

    7 prikaz: IF '(' • vyraz ')' prikaz
    8       | IF '(' • vyraz ')' prikaz ELSE prikaz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 78
    promenna  go to state 25


State 29

    9 prikaz: FOR '(' • vyrazf ';' vyraz ';' vyrazf ')' prikaz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    $default  reduce using rule 15 (vyrazf)

    vyrazf    go to state 79
    vyraz     go to state 80
    promenna  go to state 25


State 30

   10 prikaz: WHILE '(' • vyraz ')' prikaz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 81
    promenna  go to state 25


State 31

   11 prikaz: DO prikaz • WHILE '(' vyraz ')' ';'

    WHILE  shift, and go to state 82


State 32

   16 prikaz: PRINT '(' • vyraz ')' ';'
   17       | PRINT '(' • retez ')' ';'
   18       | PRINT '(' • retez ',' vyraz ')' ';'

    CISLO     shift, and go to state 4
    RETEZ     shift, and go to state 83
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    retez     go to state 84
    vyraz     go to state 85
    promenna  go to state 25


State 33

   19 prikaz: SCAN '(' • promenna ')' ';'

    PROMENNA  shift, and go to state 5

    promenna  go to state 86


State 34

   28 vyraz: vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz
   58      | '+' vyraz •

    $default  reduce using rule 58 (vyraz)


State 35

   28 vyraz: vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz
   57      | '-' vyraz •

    $default  reduce using rule 57 (vyraz)


State 36

   21 vyraz: INKREM promenna •

    $default  reduce using rule 21 (vyraz)


State 37

   22 vyraz: DEKREM promenna •

    $default  reduce using rule 22 (vyraz)


State 38

   25 vyraz: '!' vyraz •
   28      | vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz

    $default  reduce using rule 25 (vyraz)


State 39

   27 vyraz: '~' vyraz •
   28      | vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz

    $default  reduce using rule 27 (vyraz)


State 40

   26 vyraz: NOT vyraz •
   28      | vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz

    $default  reduce using rule 26 (vyraz)


State 41

    4 prikaz: '{' prikazy • '}'
   12       | '{' prikazy • error '}'

    error  shift, and go to state 87
    '}'    shift, and go to state 88


State 42

   62 vyraz: '(' error • ')'

    ')'  shift, and go to state 89


State 43

   28 vyraz: vyraz • '*' vyraz
   29      | vyraz • '/' vyraz
   30      | vyraz • '%' vyraz
   31      | vyraz • '+' vyraz
   32      | vyraz • '-' vyraz
   33      | vyraz • POSUNVLEVO vyraz
   34      | vyraz • POSUNVPRAVO vyraz
   35      | vyraz • '<' vyraz
   36      | vyraz • '>' vyraz
   37      | vyraz • MENSIROVNO vyraz
   38      | vyraz • VETSIROVNO vyraz
   39      | vyraz • ROVNO vyraz
   40      | vyraz • NENIROVNO vyraz
   41      | vyraz • '&' vyraz
   42      | vyraz • '^' vyraz
   43      | vyraz • '|' vyraz
   44      | vyraz • AND vyraz
   45      | vyraz • OR vyraz
   59      | '(' vyraz • ')'

    OR           shift, and go to state 46
    AND          shift, and go to state 47
    '|'          shift, and go to state 48
    '^'          shift, and go to state 49
    '&'          shift, and go to state 50
    ROVNO        shift, and go to state 51
    NENIROVNO    shift, and go to state 52
    '<'          shift, and go to state 53
    '>'          shift, and go to state 54
    MENSIROVNO   shift, and go to state 55
    VETSIROVNO   shift, and go to state 56
    POSUNVLEVO   shift, and go to state 57
    POSUNVPRAVO  shift, and go to state 58
    '+'          shift, and go to state 59
    '-'          shift, and go to state 60
    '*'          shift, and go to state 61
    '/'          shift, and go to state 62
    '%'          shift, and go to state 63
    ')'          shift, and go to state 90


State 44

    1 program: '{' prikazy '}' •

    $default  reduce using rule 1 (program)


State 45

    2 prikazy: prikaz prikazy •

    $default  reduce using rule 2 (prikazy)


State 46

   45 vyraz: vyraz OR • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 91
    promenna  go to state 25


State 47

   44 vyraz: vyraz AND • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 92
    promenna  go to state 25


State 48

   43 vyraz: vyraz '|' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 93
    promenna  go to state 25


State 49

   42 vyraz: vyraz '^' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 94
    promenna  go to state 25


State 50

   41 vyraz: vyraz '&' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 95
    promenna  go to state 25


State 51

   39 vyraz: vyraz ROVNO • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 96
    promenna  go to state 25


State 52

   40 vyraz: vyraz NENIROVNO • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 97
    promenna  go to state 25


State 53

   35 vyraz: vyraz '<' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 98
    promenna  go to state 25


State 54

   36 vyraz: vyraz '>' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 99
    promenna  go to state 25


State 55

   37 vyraz: vyraz MENSIROVNO • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 100
    promenna  go to state 25


State 56

   38 vyraz: vyraz VETSIROVNO • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 101
    promenna  go to state 25


State 57

   33 vyraz: vyraz POSUNVLEVO • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 102
    promenna  go to state 25


State 58

   34 vyraz: vyraz POSUNVPRAVO • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 103
    promenna  go to state 25


State 59

   31 vyraz: vyraz '+' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 104
    promenna  go to state 25


State 60

   32 vyraz: vyraz '-' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 105
    promenna  go to state 25


State 61

   28 vyraz: vyraz '*' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 106
    promenna  go to state 25


State 62

   29 vyraz: vyraz '/' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 107
    promenna  go to state 25


State 63

   30 vyraz: vyraz '%' • vyraz

    CISLO     shift, and go to state 4
    PROMENNA  shift, and go to state 5
    '+'       shift, and go to state 12
    '-'       shift, and go to state 13
    INKREM    shift, and go to state 14
    DEKREM    shift, and go to state 15
    '!'       shift, and go to state 16
    '~'       shift, and go to state 17
    NOT       shift, and go to state 18
    '('       shift, and go to state 21

    vyraz     go to state 108
    promenna  go to state 25


State 64

    5 prikaz: vyraz ';' •

    $default  reduce using rule 5 (prikaz)


State 65

   46 vyraz: promenna '=' • vyraz
